--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -19,7 +19,7 @@
   "realTimeTracking": "Seguimiento en tiempo real",
   "realTimeDesc": "Actualizaciones instantáneas de la ubicación de tu paquete",
   "deliverySpeed": "Entrega rápida",
-  "deliverySpeedDesc": "90% de los pedidos llegan en menos de 48 horas",
+  "deliverySpeedDesc": "90% de los pedidos llegan en menos de lo esperado",
   "secureDelivery": "Entrega segura",
   "secureDeliveryDesc": "Paquetes asegurados y protegidos en todo momento",
   "aboutLipocube": "Nuestro Compromiso Lipocube",
