--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,7 +3,7 @@
 	"buttonText": "Click here",
 	"title": "My App",
 
-  "products": "Products",
+  "products": "Course",
   "aboutUs": "About Us",
   "tracking": "Tracking",
   "contactUs": "Contact Us",
