--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -3,14 +3,14 @@
 	"buttonText": "Haz clic aquí",
 	"title": "Mi Aplicación",
 
-	"products": "Productos",
+	"products": "Cursos",
 	"aboutUs": "Quiénes Somos",
 	"tracking": "Seguimiento",
 	"contactUs": "Contáctanos",
 
-	"heroTitle": "Aesthetics & Regenerative Experts - Soluciones Estéticas Profesionales",
-	"heroDescription": "Productos de última generación para tratamientos estéticos y regenerativos",
-	"heroButton1": "Ver Catálogo",
+	"heroTitle": "¡Bienvenido a AprendeYA!",
+	"heroDescription": "Conéctate, aprende y crece. Regístrate o inicia sesión para acceder a nuestros cursos y bootcamps virtuales.",
+	"heroButton1": "Ver Cursos",
 	"heroButton2": "Rastrear Pedido",
 
 	"trackingTitle": "Seguimiento de Pedidos",
@@ -22,11 +22,11 @@
   "deliverySpeedDesc": "90% de los pedidos llegan en menos de lo esperado",
   "secureDelivery": "Entrega segura",
   "secureDeliveryDesc": "Paquetes asegurados y protegidos en todo momento",
-  "aboutLipocube": "Nuestro Compromiso Lipocube",
+  "aboutLipocube": "Nuestro Compromiso en AprendeYA",
   "ourCommitment": "Excelencia en servicio",
-  "commitmentText": "Más de 10 años brindando soluciones estéticas confiables y profesionales",
+  "commitmentText": "Más de 10 años brindando soluciones confiables y profesionales",
   "productQuality": "Calidad certificada",
-  "qualityText": "Productos probados clínicamente y aprobados por dermatólogos",
+  "qualityText": "Cursos Certificados",
   "howToTrack": "Cómo usar el rastreador:",
   "step1": "Ingresa tu número de seguimiento",
   "step2": "Haz clic en 'Buscar'",
