--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -3,7 +3,7 @@
 	"buttonText": "Clique aqui",
 	"title": "Meu aplicativo",
 
-	"products": "Produtos",
+	"products": "Courso",
 	"aboutUs": "Quem somos",
 	"tracking": "Rastreamento",
 	"contactUs": "Contate-nos",
