--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,15 +1,36 @@
 {
 	"welcome": "Welcome",
 	"buttonText": "Click here",
-	"title": "My App",
+	"title": "My Application",
 
-  "products": "Course",
-  "aboutUs": "About Us",
-  "tracking": "Tracking",
-  "contactUs": "Contact Us",
+	"products": "Courses",
+	"aboutUs": "About Us",
+	"tracking": "Tracking",
+	"contactUs": "Contact Us",
 
-  "heroTitle": "Aesthetics & Regenerative Experts - Professional Aesthetic Solutions",
-  "heroDescription": "State-of-the-art products for aesthetic and regenerative treatments",
-  "heroButton1": "View Catalog",
-  "heroButton2": "Track Order"
+	"heroTitle": "Welcome to AprendeYA!",
+	"heroDescription": "Connect, learn, and grow. Sign up or log in to access our online courses and bootcamps.",
+	"heroButton1": "View Courses",
+	"heroButton2": "Track Order",
+
+	"trackingTitle": "Order Tracking",
+	"trackingSubtitle": "At Lipocube, we care about transparency in every delivery. Here you can monitor your order in real-time.",
+	"whyTrackTitle": "Why track your order?",
+	"realTimeTracking": "Real-time tracking",
+	"realTimeDesc": "Instant updates on your package's location",
+	"deliverySpeed": "Fast delivery",
+	"deliverySpeedDesc": "90% of orders arrive earlier than expected",
+	"secureDelivery": "Secure delivery",
+	"secureDeliveryDesc": "Packages insured and protected at all times",
+	"aboutLipocube": "Our Commitment at AprendeYA",
+	"ourCommitment": "Excellence in service",
+	"commitmentText": "Over 10 years providing reliable and professional solutions",
+	"productQuality": "Certified quality",
+	"qualityText": "Certified Courses",
+	"howToTrack": "How to use the tracker:",
+	"step1": "Enter your tracking number",
+	"step2": "Click 'Search'",
+	"step3": "Follow your package on the map!",
+	"needHelp": "Need help?",
+	"contactSupport": "Our team is available 24/7 at:"
 }
