--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -1,16 +1,36 @@
 {
 	"welcome": "Bem-vindo",
 	"buttonText": "Clique aqui",
-	"title": "Meu aplicativo",
+	"title": "Minha Aplicação",
 
-	"products": "Courso",
-	"aboutUs": "Quem somos",
+	"products": "Cursos",
+	"aboutUs": "Quem Somos",
 	"tracking": "Rastreamento",
-	"contactUs": "Contate-nos",
+	"contactUs": "Fale Conosco",
 
-  "heroTitle": "Aesthetics & Regenerative Experts - Soluções Estéticas Profissionais",
-  "heroDescription": "Produtos de última geração para tratamentos estéticos e regenerativos",
-  "heroButton1": "Ver Catálogo",
-  "heroButton2": "Rastrear Pedido"
+	"heroTitle": "Bem-vindo ao AprendeYA!",
+	"heroDescription": "Conecte-se, aprenda e cresça. Cadastre-se ou faça login para acessar nossos cursos e bootcamps online.",
+	"heroButton1": "Ver Cursos",
+	"heroButton2": "Rastrear Pedido",
 
+	"trackingTitle": "Rastreamento de Pedidos",
+	"trackingSubtitle": "Na Lipocube, nos preocupamos com a transparência em cada entrega. Aqui você pode monitorar seu pedido em tempo real.",
+	"whyTrackTitle": "Por que rastrear seu pedido?",
+	"realTimeTracking": "Rastreamento em tempo real",
+	"realTimeDesc": "Atualizações instantâneas sobre a localização do seu pacote",
+	"deliverySpeed": "Entrega rápida",
+	"deliverySpeedDesc": "90% dos pedidos chegam antes do previsto",
+	"secureDelivery": "Entrega segura",
+	"secureDeliveryDesc": "Pacotes segurados e protegidos o tempo todo",
+	"aboutLipocube": "Nosso Compromisso no AprendeYA",
+	"ourCommitment": "Excelência no atendimento",
+	"commitmentText": "Mais de 10 anos oferecendo soluções confiáveis e profissionais",
+	"productQuality": "Qualidade certificada",
+	"qualityText": "Cursos Certificados",
+	"howToTrack": "Como usar o rastreador:",
+	"step1": "Digite seu número de rastreamento",
+	"step2": "Clique em 'Buscar'",
+	"step3": "Acompanhe seu pacote no mapa!",
+	"needHelp": "Precisa de ajuda?",
+	"contactSupport": "Nossa equipe está disponível 24/7 em:"
 }
