--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -11,26 +11,26 @@
 	"heroTitle": "Welcome to AprendeYA!",
 	"heroDescription": "Connect, learn, and grow. Sign up or log in to access our online courses and bootcamps.",
 	"heroButton1": "View Courses",
-	"heroButton2": "Track Order",
+	"heroButton2": "Track Registration",
 
-	"trackingTitle": "Order Tracking",
-	"trackingSubtitle": "At Lipocube, we care about transparency in every delivery. Here you can monitor your order in real-time.",
-	"whyTrackTitle": "Why track your order?",
-	"realTimeTracking": "Real-time tracking",
-	"realTimeDesc": "Instant updates on your package's location",
-	"deliverySpeed": "Fast delivery",
-	"deliverySpeedDesc": "90% of orders arrive earlier than expected",
-	"secureDelivery": "Secure delivery",
-	"secureDeliveryDesc": "Packages insured and protected at all times",
+	"trackingTitle": "Registration Tracking",
+	"trackingSubtitle": "At AprendeYA, we care about your learning journey. Here you can check the real-time status of your course registrations or academic deliveries.",
+	"whyTrackTitle": "Why track your registration?",
+	"realTimeTracking": "Real-time updates",
+	"realTimeDesc": "Instant status updates on your registration or educational materials",
+	"deliverySpeed": "Fast processing",
+	"deliverySpeedDesc": "90% of registrations are processed in less than 24 hours",
+	"secureDelivery": "Secure process",
+	"secureDeliveryDesc": "Your information is safe and encrypted at all times",
 	"aboutLipocube": "Our Commitment at AprendeYA",
-	"ourCommitment": "Excellence in service",
-	"commitmentText": "Over 10 years providing reliable and professional solutions",
-	"productQuality": "Certified quality",
-	"qualityText": "Certified Courses",
-	"howToTrack": "How to use the tracker:",
-	"step1": "Enter your tracking number",
+	"ourCommitment": "Quality Education",
+	"commitmentText": "Over 10 years connecting people with learning opportunities",
+	"productQuality": "Certified content",
+	"qualityText": "Our courses are accredited and professionally endorsed",
+	"howToTrack": "How to track your registration:",
+	"step1": "Enter your tracking or registration number",
 	"step2": "Click 'Search'",
-	"step3": "Follow your package on the map!",
+	"step3": "View the status and next steps!",
 	"needHelp": "Need help?",
-	"contactSupport": "Our team is available 24/7 at:"
+	"contactSupport": "Our support team is available 24/7 at:"
 }
